--- a/src/Header.css
+++ b/src/Header.css
@@ -4,7 +4,7 @@ header {
     background-size:100%;
     background-repeat: repeat;
     height: 10rem;
-    width: 110vw;
+    width: 100vw;
 }
 
 a {
